<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:text="Choose a new Color:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radiocolor"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/RadioButton07"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Red"
                android:textColor="#FF0000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton06"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Green"
                android:textColor="#008000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton05"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Blue"
                android:textColor="#0000FF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton03"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Cyan"
                android:textColor="#00FFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton04"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Purple"
                android:textColor="#800080"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton01"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Violet"
                android:textColor="#EE82EE"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RadioButton02"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Yellow"
                android:textColor="#FFFF00"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/okbutton" />

            <Button
                android:id="@+id/Button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancelbutton" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>